# pollin8-edge

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: hyp_sensei_base.yaml  hyp_sensei_focal.yaml  hyp_sensei_nwd.yaml  insects1201.yaml  train.yaml  yolov5p_insect.yaml  yolov5p_sensei.yaml
docs/: extending.md  gvsoc_deployment.md  metrics.html  rationale.md  reproducibility.md  training_kuma.md
models/: README.md
results/metrics/: sensei_arch_sweep.csv  sensei_base_192_s0.csv  sensei_base_192_s0_conf_sweep.csv  sensei_base_192_s0_per_species.csv  sensei_base_320_s0.csv  sensei_base_320_s0_conf_sweep.csv  sensei_base_320_s0_per_species.csv  sensei_base_512_s0.csv  sensei_base_512_s0_conf_sweep.csv  sensei_base_512_s0_per_species.csv  sensei_focal_192_s0.csv  sensei_focal_192_s0_conf_sweep.csv  sensei_focal_192_s0_per_species.csv  sensei_focal_256_s0.csv  sensei_focal_256_s0_conf_sweep.csv  sensei_focal_256_s0_per_species.csv  sensei_focal_320_s0.csv  sensei_focal_320_s0_conf_sweep.csv  sensei_focal_320_s0_per_species.csv  sensei_focal_noiw_192_s0.csv  sensei_focal_noiw_192_s0_conf_sweep.csv  sensei_focal_noiw_192_s0_per_species.csv  sensei_focal_noiw_320_s0.csv  sensei_focal_noiw_320_s0_conf_sweep.csv  sensei_focal_noiw_320_s0_per_species.csv  sensei_nwd_320_s0.csv  sensei_nwd_320_s0_conf_sweep.csv  significance.csv  (+2 more)
scripts/: _style.py  collect_sensei_sweep.py  fetch_models.sh  make_confusion_pair.py  make_figures.py  make_tables.py  make_values.py  publish_models.sh  sig_test.py  validate_int8.py
tests/: test_deploy.py
(+40 files in other folders)
